# CraftMoonLauncher

./: Cargo.toml
src/: download.rs  extract.rs  github.rs  hash.rs  http.rs  main.rs  make_patch.rs  manifest.rs  patch.rs  platform.rs  updater.rs  version.rs
ui/: app-window.slint
