[package]
name = "craftmoon-launcher"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.12.1"
bsdiff = "0.2.1"
bzip2 = "0.6.0"
self-replace = "1.5.0"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
windows = { version = "0.61.3", features = ["Win32_UI_Shell"] }
clap = { version = "4.5.42", features = ["derive"] }

[build-dependencies]
slint-build = "1.12.1"
