[package]
name = "craftmoon-launcher"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.16.1"
bsdiff = "0.2.1"
bzip2 = "0.6.1"
self-replace = "1.5.0"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"

[build-dependencies]
slint-build = "1.16.1"
