[package]
name = "craftmoon-launcher"
version = "0.4.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1"
hex = "0.4"
qbsdiff = "1.4"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
self-replace = "1.5.0"
semver = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
slint = "1.17"
tar = "0.4"
tempfile = "3"
walkdir = "2"
zip = "8.6"

[build-dependencies]
slint-build = "1.17"
